--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -1,3 +1,5 @@
 @font-face {
   font-family: Sahel;
-  src: ur
+  src: url('Sahel.eot');
+  src: url('Sahel.eot?#iefix') format('embedded-opentype'),
+    url('Sahel.woff2') format('w
