--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -2,4 +2,8 @@
   font-family: Sahel;
   src: url('Sahel.eot');
   src: url('Sahel.eot?#iefix') format('embedded-opentype'),
-    url('Sahel.woff2') format('w
+    url('Sahel.woff2') format('woff2'),
+    url('Sahel.woff') format('woff'),
+    url('Sahel.ttf') format('truetype');
+  font-weight: normal;
+}
