--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -7,3 +7,8 @@
     url('Sahel.ttf') format('truetype');
   font-weight: normal;
 }
+
+@font-face {
+  font-family: Sahel;
+  src: url('Sahel-Bold.eot');
+  src: url('Sahel-Bold.eot?#iefix') format('embedded-opentype'),
