--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -12,3 +12,6 @@
   font-family: Sahel;
   src: url('Sahel-Bold.eot');
   src: url('Sahel-Bold.eot?#iefix') format('embedded-opentype'),
+    url('Sahel-Bold.woff2') format('woff2'),
+    url('Sahel-Bold.woff') format('woff'),
+    url
