--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -23,4 +23,10 @@
   src: url('Sahel-Light.eot');
   src: url('Sahel-Light.eot?#iefix') format('embedded-opentype'),
     url('Sahel-Light.woff2') format('woff2'),
-    url('Sahel
+    url('Sahel-Light.woff') format('woff'),
+    url('Sahel-Light.ttf') format('truetype');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: Sa
