Updated changelog for release.

--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -29,4 +29,7 @@
 }
 
 @font-face {
-  font-family: Sa
+  font-family: Sahel;
+  src: url('Sahel-SemiBold.eot');
+  src: url('Sahel-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url(
