--- a/public/fonts/font-face.css
+++ b/public/fonts/font-face.css
@@ -43,4 +43,7 @@
   src: url('Sahel-Black.eot');
   src: url('Sahel-Black.eot?#iefix') format('embedded-opentype'),
     url('Sahel-Black.woff2') format('woff2'),
-    url('Sahel-Black.w
+    url('Sahel-Black.woff') format('woff'),
+    url('Sahel-Black.ttf') format('truetype');
+  font-weight: 900;
+}
