--- a/styles/loading-dots.module.css
+++ b/styles/loading-dots.module.css
@@ -19,4 +19,14 @@
   margin: 0 1px;
 }
 
-.loading span:nth-of-typ
+.loading span:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+
+.loading span:nth-of-type(3) {
+  animation-delay: 0.4s;
+}
+
+.loading2 {
+  display: inline-flex;
+  align-i
