--- a/styles/loading-dots.module.css
+++ b/styles/loading-dots.module.css
@@ -38,4 +38,8 @@
 
 .loading2 span {
   animation-name: blink;
- 
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+  width: 4px;
+  heigh
