Update .po files

--- a/styles/loading-dots.module.css
+++ b/styles/loading-dots.module.css
@@ -58,4 +58,12 @@
 
 @keyframes blink {
   0% {
-    opacit
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
+  }
+}
